Fix replay buttons requiring double-tap on iOS
Add touch-action: manipulation to disable double-tap-to-zoom delay,
and -webkit-tap-highlight-color to remove the grey tap flash.

--- a/note-types/css.css
+++ b/note-types/css.css
@@ -242,6 +242,8 @@ span.empty { display: none; }
     padding: 0;
     margin: 0;
     cursor: pointer;
+    touch-action: manipulation;
+    -webkit-tap-highlight-color: transparent;
     transition: transform 180ms var(--spring);
     vertical-align: middle;
     line-height: 1;
